Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36948

Qt 4/Windows: Active Qt WebBrowser example crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.8.6
    • 4.8.x
    • Examples and Demos
    • None
    • Windows VS2013
    • Qt 5: 2e44efa5056355ac2c069ad2bd8a8ba6562f3eb6 (stable, 20.2014, 5.3) Qt 4: eefff4ac4b6915485d6362536fe0907820a68982 (21.2.2014, 4.8.6)

    Description

      0	QList<QPointer<QWidget> >::QList<QPointer<QWidget> >	qlist.h	122	0x730054b8	
      1	QForeachContainer<QList<QPointer<QWidget> > >::QForeachContainer<QList<QPointer<QWidget> > >	qglobal.h	2394	0x73005439	
      2	qForeachContainerNew<QList<QPointer<QWidget> > >	qglobal.h	2404	0x73005395	
      3	QWidgetPrivate::setParent_sys	qwidget_win.cpp	636	0x72ffe9ca	
      4	QWidget::setParent	qwidget.cpp	10215	0x72f8775b	
      5	QWidget::setParent	qwidget.cpp	10161	0x72f8743f	
      6	QWidgetAction::setDefaultWidget	qwidgetaction.cpp	151	0x72fa8d81	
      7	QToolBar::addWidget	qtoolbar.cpp	914	0x736bbdd0	
      8	Ui_MainWindow::setupUi	ui_mainwindow.h	138	0x7ff773f98e86	
      9	MainWindow::MainWindow	main.cpp	84	0x7ff773f9338c	
      10	main	main.cpp	180	0x7ff773f94005	
      11	WinMain	qtmain_win.cpp	131	0x7ff773fceea1	
      12	__tmainCRTStartup	crtexe.c	618	0x7ff773fce0a1	
      13	WinMainCRTStartup	crtexe.c	466	0x7ff773fcde1e	
      14	BaseThreadInitThunk	KERNEL32		0x7ffb1d2615cd	
      15	RtlUserThreadStart	ntdll		0x7ffb1e0643d1	
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes