examples/activeqt/webbrowser/main.cpp
@@ -41,6 +41,8 @@
 #include <QApplication>
 #include <QMessageBox>
 #include <QProgressBar>
+#include <QLineEdit>
+#include <QLabel>
 #include <QStatusBar>
 #include <QMainWindow>
 #include <QAbstractEventDispatcher>
@@ -74,12 +76,17 @@ public slots:
 
 private:
     QProgressBar *pb;
+    QLineEdit *addressEdit;
 };
 //! [0] //! [1]
 
 MainWindow::MainWindow()
 {
     setupUi(this);
+
+    addressEdit = new QLineEdit;
+    tbAddress->insertWidget(actionGo, new QLabel(tr("Address")));
+    tbAddress->insertWidget(actionGo, addressEdit);
 
     connect(addressEdit, SIGNAL(returnPressed()), actionGo, SLOT(trigger()));
     connect(actionBack, SIGNAL(triggered()), WebBrowser, SLOT(GoBack()));
